--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.2",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
